src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closest_Account_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Closest Account Team Member to this contact</description>
        <label>Closest Account Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Team_Member__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Team_Member__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domicilio__c</fullName>
        <label>Domicilio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_de_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo de Cuenta</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contactos</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contactos</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PictureUrl__c</fullName>
        <label>PictureUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <formula>IF(PictureUrl__c != null, IMAGE(PictureUrl__c, &quot;&quot;, 64, 64) , IMAGE(&quot;/img/social/unknown_profile_pic.png&quot;, &quot;&quot;, 64, 64) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TipoDeRelacionamiento__c</fullName>
        <label>Tipo de Relacionamiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>areadeespecialidad__c</fullName>
        <label>Área de especialidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Redes</fullName>
                </value>
                <value>
                    <fullName>Infraestructura</fullName>
                </value>
                <value>
                    <fullName>Datacenter</fullName>
                </value>
                <value>
                    <fullName>Seguridad Informática</fullName>
                </value>
                <value>
                    <fullName>Soluciones Móviles</fullName>
                </value>
                <value>
                    <fullName>Busisness Inteligent</fullName>
                </value>
                <value>
                    <fullName>Bases de Datos</fullName>
                </value>
                <value>
                    <fullName>Aplicaciones</fullName>
                </value>
                <value>
                    <fullName>RRHH</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Abastecimiento</fullName>
                </value>
                <value>
                    <fullName>Ventas</fullName>
                </value>
                <value>
                    <fullName>Finanzas</fullName>
                </value>
                <value>
                    <fullName>Administración</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incluir al Organigrama</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Movil_solo_numeros</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK( MobilePhone ) , false, NOT(ISNUMBER(MobilePhone)))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>El telefono solo puede poseer caracteres numericos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fecha_de_nacimiento_menor_a_hoy</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK( Birthdate ) , false, Birthdate &gt; TODAY() )</errorConditionFormula>
        <errorDisplayField>Birthdate</errorDisplayField>
        <errorMessage>La fecha de nacimiento debe ser un valor menor a hoy</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>telefono_solo_numerico</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(Phone) , false, NOT(ISNUMBER( Phone )))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>El telefono solo puede poseer caracteres numericos</errorMessage>
    </validationRules>
</CustomObject>